test: Cars 객체 추가로 인한 컴파일 에러 해결